--- a/wiki/RelevantMeetings.wiki
+++ b/wiki/RelevantMeetings.wiki
@@ -3,9 +3,8 @@
 
 = Upcoming =
 
-*<a href="http://bimib.disco.unimib.it/index.php/SSFW09
-">Signs, Symptoms and Findings: Towards an Ontology for Clinical Phenotypes</a>
+*[http://bimib.disco.unimib.it/index.php/SSFW09]Signs, Symptoms and Findings: Towards an Ontology for Clinical Phenotypes
 
 = Past =
 
-*<a href="http//icbo.buffalo.edu">2009 International Conference on Biomedical Ontology (ICBO 2009)</a>
+*[http//icbo.buffalo.edu]2009 International Conference on Biomedical Ontology (ICBO 2009)
