--- a/wiki/RelevantMeetings.wiki
+++ b/wiki/RelevantMeetings.wiki
@@ -1,10 +1,10 @@
 #labels ogms
-#OGMS Relevant Meetings
+=OGMS Relevant Meetings=
 
-= Upcoming =
+==Upcoming==
 
 *[http://bimib.disco.unimib.it/index.php/SSFW09 Signs, Symptoms and Findings: Towards an Ontology for Clinical Phenotypes]
 
-= Past =
+==Past==
 
 *[http://icbo.buffalo.edu 2009 International Conference on Biomedical Ontology (ICBO 2009)]
