--- a/wiki/Purl_management.wiki
+++ b/wiki/Purl_management.wiki
@@ -6,7 +6,7 @@ Setup is at http://purl.org/.
 
 We use purl.obolibrary.org, which is a CNAME for purl.org, currently.
 
-There is a purl "group" called "ogms". It currently has Alan(alanruttenberg) and Lindsay(lgcowell) as members. 
+There is a purl "group" called "ogms". It currently has Alan(alanruttenberg), Lindsay(lgcowell), and Albert (agoldfain) as members. 
 
 Existing purls:
  * http://purl.obolibrary.org/obo/ogms/2009-08-07/ogms.owl - first translation
