--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -4,7 +4,7 @@
 = OGMSv0.2-v0.3 Changelog =
 Changes made for OGMSv0.3
  * OBO file: Added dbxrefs to the issue tracker for traceability
- * OBO and OWL files: Added 'obsolete_' prefix to obsoleted terms
+ * OBO and OWL files: Added {{{obsolete_}}} prefix to obsoleted terms
  * [http://code.google.com/p/ogms/issues/detail?id=4 Issue 4] closed without change
  * [http://code.google.com/p/ogms/issues/detail?id=5 Issue 5] closed without change
  * [http://code.google.com/p/ogms/issues/detail?id=6 Issue 6] closed opened issue 37 to clairfy
@@ -16,7 +16,7 @@ Changes made for OGMSv0.3
  * [http://code.google.com/p/ogms/issues/detail?id=18 Issue 18] left open, changed definition of clinical picture (OGMS:0000016)
  * [http://code.google.com/p/ogms/issues/detail?id=19 Issue 19] closed, changed definition of phenotype (OGMS:0000023)
  * [http://code.google.com/p/ogms/issues/detail?id=22 Issue 22] closed, obsoleted (OGMS:0000068) bodily feature and moved its elucidation to defined class 'bodily feature of a patient', obsoleted (OGMS:0000072) OGMSdisposition
-[http://code.google.com/p/ogms/issues/detail?id=26 Issue 26], left open for further work, 
+ * [http://code.google.com/p/ogms/issues/detail?id=26 Issue 26], left open for further work, 
   * reclassified clinical history (OGMS:0000018) from representation (OGMS:0000013) to clinical finding (OGMS:0000014) 
   * reclassified laboratory finding (OGMS:0000018) from representation (OGMS:0000013) to clinical finding (OGMS:0000014) 
   * reclassified image finding (OGMS:0000018) from representation (OGMS:0000013) to clinical finding (OGMS:0000014)
