--- a/wiki/Browse.wiki
+++ b/wiki/Browse.wiki
@@ -1,4 +1,4 @@
 #labels Featured
 An experimental tree browser for OGMS is available [http://ogms.googlecode.com/svn/trunk/web/ogms.html here]. Until a bug that prevents the whole tree to be visible initially is fixed, you probably want to command-click or right-click first thing, to get it to do so. Note that the viewer requires that java applets work in your browser. Email alanruttenberg@gmail.com if you have problems using it.
 
-[http://owl.cs.manchester.ac.uk/browser/classes/165907323/?session=12562692abd-641-1256269b7d0 Here] is OGMS viewed in the Manchester OWL Browser.
+[http://owl.cs.manchester.ac.uk/browser/classes/?session=12562692abd-641-1256269b7d0 Here] is OGMS viewed in the Manchester OWL Browser.
