--- a/wiki/Versions.wiki
+++ b/wiki/Versions.wiki
@@ -24,6 +24,12 @@ Always points to latest dated version.
  * http://purl.obolibrary.org/obo/ogms/2009-12-03/ogms.owl
  * http://purl.obolibrary.org/obo/ogms/2009-12-03/ogms.obo
 
+== Version "0.4" ==
+
+ * http://purl.obolibrary.org/obo/ogms/2010-01-29/ogms.owl
+ * http://purl.obolibrary.org/obo/ogms/2010-01-29/ogms.obo
+
+
 = OWL 1 usage =
 
 Use the PURL for the version you want. Ignore any complaints from tools that the ontology URI doesn't match the physical URI
