--- a/wiki/Versions.wiki
+++ b/wiki/Versions.wiki
@@ -34,6 +34,10 @@ Always points to latest dated version.
  * http://purl.obolibrary.org/obo/ogms/2010-03-31/ogms.owl
  * http://purl.obolibrary.org/obo/ogms/2010-03-31/ogms.obo
 
+== Version "0.6" ==
+ * http://purl.obolibrary.org/obo/ogms/2010-07-20/ogms.owl
+ * http://purl.obolibrary.org/obo/ogms/2010-07-20/ogms.obo
+
 = OWL 1 usage =
 
 Use the PURL for the version you want. Ignore any complaints from tools that the ontology URI doesn't match the physical URI
