--- a/wiki/Versions.wiki
+++ b/wiki/Versions.wiki
@@ -43,6 +43,9 @@ Note: PURL service down for adding new PURLs...here are the googlecode paths
  * http://ogms.googlecode.com/svn/releases/2010-11-18/ontology/ogms.owl
  * http://ogms.googlecode.com/svn/releases/2010-11-18/ontology/ogms.obo
 
+== Version "0.8" ==
+ * http://ogms.googlecode.com/svn/releases/2011-02-21/ontology/ogms.owl
+ * http://ogms.googlecode.com/svn/releases/2011-02-21/ontology/ogms.obo
 
 = OWL 1 usage =
 
