Edited wiki page Changelog through web user interface.

--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -1,4 +1,13 @@
 #Changes made between successive versions of OGMS
+
+= OGMS Development Version Changelog =
+<i>Note these changes are in the development version only.</i>
+ * Update to BFO2 ids
+ * Modified definition of 'clinical picture' to include dispositions and allow for partial clinical pictures.
+ * [http://code.google.com/p/ogms/issues/detail?id=69 Issue 69] Modified definition of 'diagnostic process' to allow the diagnostic statement (output) to be about a disease, disorder, or syndrome, or that a patient has none of these. 
+ * [http://code.google.com/p/ogms/issues/detail?id=73 Issue 73] Added terms 'relapse' and 'remission'.
+ * TODO MIREOT: 'drug role' http://purl.obolibrary.org/obo/OBI_0000040
+
 = OGMSv0.8-v0.9 Changelog =
  * [http://code.google.com/p/ogms/issues/detail?id=60 Issue 60] closed, added 'diagnostic process', modified term 'diagnosis'.
  * [http://code.google.com/p/ogms/issues/detail?id=61 Issue 61] closed, added term 'injury'.
