--- a/wiki/OMRE.wiki
+++ b/wiki/OMRE.wiki
@@ -7,12 +7,12 @@ One of the guiding principles of OGMS development has been to keep the ontology 
 
 Recently, there have been multiple requests to incorporate general terms for pathological anatomical entities (e.g., embolism, rash, fracture, lesion) and pathological bodily processes (e.g., hemorrhaging, fever process, inflammation process) within the OGMS framework. The proposal is to create an extension of OGMS called the *Ontology of Medically Relevant Entities* for this purpose.
 
-Several of the proposed terms already exist in the Symptom Ontology (SYMP) and elsewhere in the OBO Foundry. These will be examined on a case-by-case basis and considered for import, however some issues are noticeable with respect to many of these external terms:
+Several of the proposed terms already exist in the OBO Foundry ontologies. These will be examined on a case-by-case basis and considered for import, however some issues are noticeable with respect to many of these external terms:
 
-  # The source ontology is currently not actively maintained (e.g., SYMP) 
+  # The source ontology is currently not actively maintained 
   # Several relevant terms have no definitions or have unclear definitions.    
   # The source ontology does not conform to the OGMS framework
-  # The source ontology introduces several defined-class organizational terms that are not desirable for import (e.g., SYMP)
+  # The source ontology introduces several defined-class organizational terms that are not desirable for import 
 
 == Development of OMRE ==
 
