--- a/wiki/ApplicationsOfOGMS.wiki
+++ b/wiki/ApplicationsOfOGMS.wiki
@@ -2,31 +2,22 @@
 
 = Introduction =
 
- * [[https://code.google.com/p/cvdo/ The Cardiovascular Disease Ontology]]
- * Oral Health and Disease Ontology
- * Health Data Ontology Trunk 
- * Vital Sign Ontology 
- * Ontology of Medically Relevant Social Entities 
- * Mental Functioning Ontology 
+ * [https://code.google.com/p/cvdo/ The Cardiovascular Disease Ontology]
+ * [https://code.google.com/p/ohd-ontology/Oral Health and Disease Ontology]
+ * [http://code.google.com/p/hdot/ Health Data Ontology Trunk] 
+ * [https://code.google.com/p/vital-sign-ontology/ Vital Sign Ontology] 
+ * [https://code.google.com/p/ogms/wiki/OMRE Ontology of Medically Relevant Social Entities] 
+ * [http://code.google.com/p/mental-functioning-ontology/  Mental Functioning Ontology] 
  * Ontology for Pain
  * Mental Health and Quality of Life
- * Sleep Domain Ontology
- * Ontology for Newborn Screening and Translational Research
- * Infectious Disease Ontology
- * Neurological Disease Ontology
- * Ontology of Adverse Events
- * Adverse Event Reporting Ontology
+ * [http://purl.bioontology.org/ontology/SDO Sleep Domain Ontology]
+ * [http://purl.bioontology.org/ontology/ONSTR Ontology for Newborn Screening and Translational Research]
+ * [http://infectiousdiseaseontology.org/page/Main_Page Infectious Disease Ontology]
+ * [https://code.google.com/p/neurological-disease-ontology/ Neurological Disease Ontology]
+ * [http://www.oae-ontology.org/  Ontology of Adverse Events]
+ * [http://code.google.com/p/adverse-event-reporting-ontology/  Adverse Event Reporting Ontology]
 
 
-  https://code.google.com/p/cvdo/
-  https://code.google.com/p/ohd-ontology/
-  http://code.google.com/p/hdot/
-  https://code.google.com/p/vital-sign-ontology/
-  https://code.google.com/p/ogms/wiki/OMRE
-  http://code.google.com/p/mental-functioning-ontology/ 
-  http://purl.bioontology.org/ontology/SDO
-  http://purl.bioontology.org/ontology/ONSTR
-  http://infectiousdiseaseontology.org/page/Main_Page 
-  https://code.google.com/p/neurological-disease-ontology/ 
-  http://www.oae-ontology.org/ 
-  http://code.google.com/p/adverse-event-reporting-ontology/ 
+ 
+  
+  
